--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
                                         <br>
                                           <!-- Frontend solution: Design & Development. -->
 
-                                          <i>Bachelor of Graphic Design. Main fiel occupation - Gamedev 
+                                          <i>Bachelor of Graphic Design. Main field occupation - Gamedev 
                                           <br>Am looking for a job - in a field of Interaction Design</i>
 
                                           <!-- B<i>achelor of Graphic Design. Main fiel occupation - Gamedev</i>
@@ -1091,7 +1091,7 @@
                 style="color: cornsilk; font-weight: 400;">UX/UI • Design • Typography</mark></em></p> -->
                 <div style="background-color: var(--dark-color);"><br><br><br></div>
           </div>
-          <h1 id="1bb171bf-a26d-814a-b7c7-facc188e8238" class=""><mark class="highlight-default">TYPOGRAPHY</mark></h1>
+          <h1 id="1bb171bf-a26d-814a-b7c7-facc188e8238" class=""><mark class="highlight-default" style="background-color:  var(--dark-color); color: var(--light-color) !important;">TYPOGRAPHY</mark></h1>
           <h3 id="1bb171bf-a26d-8124-a8d5-dc6ad9c51f04" class="block-color-yellow">Game Title Screen
             <br><span>    *non-existing one</span>
           </h3>
@@ -1112,6 +1112,9 @@
           <figure id="1bb171bf-a26d-813c-ac0c-d815281fdec9" class="image"><a href="TGDD______20_v2-06_1.png"><img
                 style="width:710px" src="/zen-pa-portfolio/assets/TGDD______20_v2-06_1-D1WUVlMQ-D1WUVlMQ.png" /></a></figure>
 
+
+
+                
           <h1 id="1bb171bf-a26d-81c6-8962-e867f1561563" class="">UI/UX</h1>
           <h3 id="1bb171bf-a26d-81e6-9695-cc3d9f9d9c68" class="block-color-yellow"><em>"Fast paced </em><em><mark
                 class="highlight-red">Slay the Spire</mark></em>"<em></em>
@@ -1191,6 +1194,9 @@
           <figure id="1bb171bf-a26d-81ab-ad64-cf178fc8dd0f" class="image"><a href="Group_20.jpg"><img style="width:682px"
                 src="/zen-pa-portfolio/assets/Group_20-BBbfPWwT-BBbfPWwT.jpg" /></a></figure>
 
+
+
+                
           <h1 id="1bb171bf-a26d-8157-a595-edfd6490dafc" class=""><mark class="highlight-default">GRAPHICAL <br>USER <br>INTERFACE</mark></h1>
           <h3 id="1bb171bf-a26d-81a9-862a-f15f03ba2740" class="block-color-yellow">MMO Manager game
             <br><span>   game jam</span>
