--- a/index.html
+++ b/index.html
@@ -1092,13 +1092,21 @@
                 <div style="background-color: var(--dark-color);"><br><br><br></div>
           </div>
           <h1 id="1bb171bf-a26d-814a-b7c7-facc188e8238" class=""><mark class="highlight-default" style="background-color:  var(--dark-color); color: var(--light-color) !important;">TYPOGRAPHY</mark></h1>
-          <h3 id="1bb171bf-a26d-8124-a8d5-dc6ad9c51f04" class="block-color-yellow">Game Title Screen
-            <br><span>    *non-existing one</span>
-          </h3>
-          <figure id="1bb171bf-a26d-81e0-940d-f9c4ae9cb432" class="image"><a href="Frame_127.png"><img style="width:710px; margin-bottom: calc(var(--margin-vertical-l) * 2) !important; margin-top: calc(var(--margin-vertical-m) * 2) !important;"
+
+          <div style="">
+            <h3 id="1bb171bf-a26d-8124-a8d5-dc6ad9c51f04" class="block-color-yellow" style=" color: #6dc8b48f !important;
+                      background-color: var(--dark-color); margin: 0 !important; 
+                      padding-left: var(--margin-m);
+                      padding-top: calc(var(--margin-vertical-m) * 1.33);
+                      padding-bottom: calc(var(--margin-vertical-m) * .44);">Game Title Screen
+              <br><span>    *non-existing one</span>
+            </h3>
+          </div>
+
+          <figure id="1bb171bf-a26d-81e0-940d-f9c4ae9cb432" class="image" style="background-color: var(--dark-color); margin: 0 !important;"><a href="Frame_127.png"><img style="width:710px; margin-bottom: calc(var(--margin-vertical-l) * 2) !important; margin-top: calc(var(--margin-vertical-m) * 2) !important;"
                 src="/zen-pa-portfolio/assets/Frame_127-BJ8AG8fn-BJ8AG8fn.png" /></a></figure>
 
-          <h3 id="1bb171bf-a26d-81ee-8ab1-da3739aada7b" class="block-color-yellow">Promo Design
+          <h3 id="1bb171bf-a26d-81ee-8ab1-da3739aada7b" class="block-color-yellow" style="opacity: .94;">Promo Design
             <br><span>   gamedev event</span>
           </h3>
           
