--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@
                 style="color: cornsilk; font-weight: 400;">UX/UI • Design • Typography</mark></em></p> -->
                 <div style="background-color: var(--dark-color);"><br><br><br></div>
           </div>
-          <h1 id="1bb171bf-a26d-814a-b7c7-facc188e8238" class=""><mark class="highlight-default" style="background-color:  var(--dark-color); color: var(--light-color) !important;">TYPOGRAPHY</mark></h1>
+          <h1 id="1bb171bf-a26d-814a-b7c7-facc188e8238" class=""><mark class="highlight-default">TYPOGRAPHY</mark></h1>
 
           <div style="">
             <h3 id="1bb171bf-a26d-8124-a8d5-dc6ad9c51f04" class="block-color-yellow" style=" color: #6dc8b48f !important;
