--- a/index.html
+++ b/index.html
@@ -967,21 +967,20 @@
                                       
                                       <h3 id="-experience-" class="cv-header">EXPERIENCE</h3>
                                       <div class="cv-block">
-                                          <p><strong>Administrator - White Rabbit ( 2023 - ... )</strong>
+                                          <!-- <p><strong>Administrator - White Rabbit ( 2023 - ... )</strong>
                                           <br>    <em>PlayStation, Board game club</em>
 
                                         <p><strong>Developer - Provision Ent. ( 2019 - … )</strong>
                                           <br>  <strong>CampMarket</strong>
                                           <br>    PC, PS, Xbox, Nintendo Switch
                                           <br>    grand strategy, tycoon, base building, 4X, god game
-                                          <!-- <br>    <em>TBA</em> --> 
+
                                           <br>  <strong>Lichen Forest</strong>
                                           <br>    PC, PS, Xbox, Nintendo Switch
                                           <br>    immersive sim, survival, base building, colony sim
-                                          <!-- <br>    <em>TBA</em> -->
-                                        </p>
+                                        </p> -->
 
-                                        <p><strong>Event Manager - Ternopil Gamedev ( 2018 - 2021 )</strong>
+                                        <p><strong>Manager, Designer - Ternopil Gamedev ( 2018 - 2021 )</strong>
                                           <br>    <em>Local Gamedev Community. Meetup, Game Jam events</em>
                                           <!-- <br>  <strong>Meetup, Game Jam events</strong> -->
                                         </p>
