--- a/index.html
+++ b/index.html
@@ -985,14 +985,14 @@
                                           <!-- <br>  <strong>Meetup, Game Jam events</strong> -->
                                         </p>
                                         
-                                        <p><strong>UI/UX Design - Mikiri Games ( 2021 )</strong>
+                                        <p><strong>UI/UX Designer - Mikiri Games ( 2021 )</strong>
                                           <br>    <em>Layout improvement. Internship</em>
                                           <br>  <strong>Soul Forge</strong>
                                           <br>    Mobile
                                           <br>    deck building, roguelite
                                         </p>
 
-                                        <p><strong>Game/Level Design - Hook Games ( 2020 )</strong>
+                                        <p><strong>Game/Level Designer - Hook Games ( 2020 )</strong>
                                           <br>    <em>Combat and movement system
                                           <br>    Level, enemy progression</em>
                                           <br>  <strong>Space Me Out</strong>
