--- a/index.html
+++ b/index.html
@@ -933,16 +933,28 @@
                   ZEN<mark class="highlight-gray" style="color: var(--hero-second-header-color) !important;">DRAN</mark> PA<mark
                     class="highlight-gray" style="color: var(--hero-second-header-color) !important;">VLO</mark></h1>
 
-                  <div class="units-container" style="display: flex; justify-content: space-evenly; height: var(--unit-size); position: relative; bottom: var(--unit-size);">
-                    <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(1.2);">
-                    <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(.6);">
-                    <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(1.2);">
-                    <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(.6);">
-                    <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(1.2);">
-                    <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(.6);">
-                    <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(1.2);">
-                    <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(.6);">
-                  </div>
+                    <!-- <div style="width: 100%;"> -->
+                      <div style="
+                                height: var(--unit-size); 
+                                width: var(--unit-size);
+                                display: flex; 
+                                justify-content: space-evenly; 
+                                position: relative; 
+                                bottom: var(--unit-size);
+
+                                margin-left: var(--margin-s);
+                                ">
+
+                      <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(1.2);">
+                      <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(.6);">
+                      <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(1.2);">
+                      <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(.6);">
+                      <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(1.2);">
+                      <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(.6);">
+                      <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(1.2);">
+                      <img src="/zen-pa-portfolio/assets/hero-grey-ezgif.com-gif-to-webp-converter-kZC9y-oT.webp" alt="" style="filter: brightness(.6);">
+                    </div>
+                  <!-- </div> -->
 
 
               <!-- <h1 id="1bb171bf-a26d-8105-9840-ee80ee8975ba" class="hero-header" style="color: var(--hero-second-header-color)">
