bg-unit-opacity

--- a/index.html
+++ b/index.html
@@ -1350,15 +1350,19 @@
                         </div> -->
 
 
+
+
+
+
                     <div style="height: 45rem; 
                                 overflow: hidden;
                                 position: relative;
-                                
                                 ">
                                 <!-- bottom: 50rem; -->
                       <img class="animated-slower villain-black" src="/zen-pa-portfolio/assets/villain-grey-slow461ms-ezgif.com-gif-to-webp-converter-BeOiNnci.webp" alt=""
                          style="
                             filter: brightness(.32) sepia(1.8) contrast(1.84) hue-rotate(180deg) invert(100%);
+                            opacity: .45;
 
                             position: relative; 
                             bottom: 18rem;
@@ -1366,10 +1370,6 @@
                             z-index: 2;
 
                             scale: 1.4;
-                            
-
-
-
                             ">
                     </div>
 
