--- a/index.html
+++ b/index.html
@@ -1158,14 +1158,14 @@
                                 
                          <p style="
                                   
-                                  filter: invert();
+                                  filter: invert(80%);
                                   position: relative;
                                   z-index: 3 !important;
                                   "
                          >bug not</p>
                       <img class="animated-slower villain-black" src="/zen-pa-portfolio/assets/villain-grey-slow461ms-ezgif.com-gif-to-webp-converter-BeOiNnci.webp" alt=""
                          style="
-                            filter: brightness(.32) 
+                            filter: brightness(.4) 
                                     sepia(1.8) 
                                     contrast(1.84) 
                                     hue-rotate(180deg) 
