--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,8 @@
                                           <p><strong>2D</strong></p>
                                           <ul>
                                             <li>Figma</li>
-                                            <li>Adobe</li>
+                                            <li>Adobe Photoshop</li>
+                                            <li>Adobe Illustrator</li>
                                             <!-- Ps, Ai, Ae -->
                                             <!-- <li>Photoshop</li>
                                             <li>Illustrator</li> -->
