--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,9 @@
                                   position: relative;
                                   z-index: 3 !important;
                                   "
-                         >bug not</p>
+                         >
+                           <!-- bug not -->
+                         </p>
                       <img class="animated-slower villain-black" src="/zen-pa-portfolio/assets/villain-grey-slow461ms-ezgif.com-gif-to-webp-converter-BeOiNnci.webp" alt=""
                          style="
                             filter: brightness(.4) 
