Replace text with HTML comment in index.html

--- a/index.html
+++ b/index.html
@@ -1535,7 +1535,9 @@
                                   position: relative;
                                   z-index: 3 !important;
                                   "
-                         >not bug but feature</p>
+                         >
+                           <!-- not bug but feature -->
+                         </p>
                       <img class="animated-slower villain-black" src="/zen-pa-portfolio/assets/villain-grey-slow461ms-ezgif.com-gif-to-webp-converter-BeOiNnci.webp" alt=""
                          style="
                             filter: brightness(.32) sepia(1.8) contrast(1.84) hue-rotate(180deg) invert(100%);
