--- a/index.html
+++ b/index.html
@@ -1131,15 +1131,20 @@
                                           <ul>
                                             <li>Unreal</li>
                                             <li>Unity</li>
+                                          </ul>
+                                          <p><strong>3D</strong></p>
+                                          <ul>
                                             <li>Blender</li>
                                           </ul>
 
                                           <p><strong>2D</strong></p>
                                           <ul>
                                             <li>Figma</li>
+                                            <!-- <li>Ps, Ai, Ae</li> -->
                                             <li>Adobe Photoshop</li>
                                             <li>Adobe Illustrator</li>
-                                            <!-- Ps, Ai, Ae -->
+                                            <li>Adobe After Effects</li>
+                                            
                                             <!-- <li>Photoshop</li>
                                             <li>Illustrator</li> -->
                                           </ul> 
